syntax = "proto3";
package movie;

// Définition du message movie
message Movie {
  string id = 1;
  string title = 2;
  string description = 3;
}

// Définition des messages de requête et de réponse pour les méthodes
message GetMovieRequest {
  string movie_id = 1;
}

message GetMovieResponse {
  Movie movie = 1;
}

message SearchMoviesRequest {
  string query = 1;
}

message SearchMoviesResponse {
  repeated Movie movies = 1;
}

message CreateMovieRequest {
  string id = 1;
  string title = 2;
  string description = 3;
}

message CreateMovieResponse {
  Movie movie = 1;
}

message UpdateMovieRequest {
  string id = 1;
  string title = 2;
  string description = 3;
}

message UpdateMovieResponse {
  Movie movie = 1;
}

message DeleteMovieRequest {
  string movie_id = 1;
}

message DeleteMovieResponse {
  string message = 1;
}

// Définition du service de films
service MovieService {
  rpc GetMovie(GetMovieRequest) returns (GetMovieResponse);
  rpc SearchMovies(SearchMoviesRequest) returns (SearchMoviesResponse);
  rpc CreateMovie(CreateMovieRequest) returns (CreateMovieResponse);
  rpc UpdateMovie(UpdateMovieRequest) returns (UpdateMovieResponse);
  rpc DeleteMovie(DeleteMovieRequest) returns (DeleteMovieResponse);
}