syntax = "proto3";

package tvShow;

// Définition du message TVShow
message Tvshow {
  string id = 1;
  string title = 2;
  string description = 3;
}

// Messages de requête et de réponse
message GetTvshowRequest {
  string tv_show_id = 1;
}

message GetTvshowResponse {
  Tvshow tv_show = 1;
}

message SearchTvshowsRequest {
  string query = 1;
}

message SearchTvshowsResponse {
  repeated Tvshow tv_shows = 1;
}

// Service TVShowService
service TVShowService {
  rpc GetTvshow(GetTvshowRequest) returns (GetTvshowResponse);
  rpc SearchTvshows(SearchTvshowsRequest) returns (SearchTvshowsResponse);
}
